# tachyon

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  schema.sql  state.rs  utils.rs
src/models/: transfer.rs
src/routes/: download.rs  mod.rs  upload.rs
src/services/: filetype.rs  mod.rs  upload.rs
src/utils/: env.rs  format.rs  id.rs  mod.rs
