[package]
name = "tachyon"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-extensible-rate-limit = "0.4.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
dotenv = "0.15.0"
nanoid = "0.4"
serde = "1.0.219"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
